--- a/css/nav.css
+++ b/css/nav.css
@@ -1,5 +1,5 @@
 .desktop-bar {
-    position: absolute;
+    position: fixed;
     width: 100%;
     height: 69px;
     top: 0px;
@@ -116,6 +116,7 @@
 }
 .desktop-leadership:hover .desktop-leadership-text {
     font-weight: bold;
+    left: -0.5px;
 }
 .desktop-leadership-active {
     position: absolute;
@@ -180,6 +181,7 @@
 }
 .desktop-projects:hover .desktop-projects-text {
     font-weight: bold;
+    left: -0.5px;
 }
 .desktop-projects-icon {
     position: absolute;
