--- a/css/home.css
+++ b/css/home.css
@@ -1,9 +1,12 @@
+.desktop {
+    height: 970px;
+}
 .desktop-content {
     position: absolute;
     width: 1200px;
-    height: 808px;
+    height: 820px;
     left: calc(50% - 1200px/2);
-    top: 100px;    
+    top: 100px;        
 }
 .desktop-banner {
     position: absolute;
@@ -55,8 +58,8 @@
 }
 .desktop-mission {
     position: absolute;
-    width: 327.5px;
-    height: 375px;
+    width: 327px;
+    height: 387px;
     left: 0px;
     top: 433px;
     
@@ -89,7 +92,7 @@
 .desktop-mission-text {
     position: absolute;
     width: 244.17px;
-    height: 226.67px;
+    height: 210px;
     left: 41.67px;
     top: 81px;
     
@@ -97,18 +100,18 @@
     font-style: normal;
     font-weight: normal;
     font-size: 20px;
-    line-height: 125%;
-    /* or 25px */
+    line-height: 150%;
+    /* or 30px */
     
     text-align: center;
     letter-spacing: 0.015em;
     
-    color: #6C6C6C;    
+    color: #6C6C6C;;    
 }
 .desktop-about {
     position: absolute;
-    width: 847.5px;
-    height: 375px;
+    width: 848px;
+    height: 387px;
     right: 0px;
     top: 433px;
     
@@ -141,7 +144,7 @@
 .desktop-about-text {
     position: absolute;
     width: 764.17px;
-    height: 226.67px;
+    height: 240px;
     left: 41.67px;
     top: 81px;
     
@@ -149,24 +152,24 @@
     font-style: normal;
     font-weight: normal;
     font-size: 20px;
-    line-height: 125%;
-    /* or 25px */
+    line-height: 150%;
+    /* or 30px */
     
     text-align: center;
     letter-spacing: 0.015em;
     
-    color: #6C6C6C;    
+    color: #6C6C6C;        
 }
 
 .laptop {
-    height: 982px;
+    height: 1059px;
 }
 .laptop-content {
     position: absolute;
     width: 920px;
-    height: 852px;
+    height: 913px;
     left: calc(50% - 920px/2);
-    top: 96px;
+    top: 96px;    
 }
 .laptop-banner {
     position: absolute;
@@ -219,7 +222,7 @@
 .laptop-mission {
     position: absolute;
     width: 281px;
-    height: 416px;
+    height: 477px;
     left: 0px;
     top: 436px;
     
@@ -251,17 +254,17 @@
 }
 .laptop-mission-text {
     position: absolute;
-    width: 244.17px;
-    height: 226.67px;
-    left: calc(50% - 244.17px/2 + 0.25px);
+    width: 201px;
+    height: 300px;
+    left: calc(50% - 201px/2);
     top: 81px;
     
     font-family: Legend M54;
     font-style: normal;
     font-weight: normal;
     font-size: 20px;
-    line-height: 125%;
-    /* or 25px */
+    line-height: 150%;
+    /* or 30px */
     
     text-align: center;
     letter-spacing: 0.015em;
@@ -271,7 +274,7 @@
 .laptop-about {
     position: absolute;
     width: 624px;
-    height: 416px;
+    height: 477px;
     left: 296px;
     top: 436px;
     
@@ -303,32 +306,32 @@
 }
 .laptop-about-text {
     position: absolute;
-    width: 576px;
-    height: 275px;
-    left: calc(50% - 576px/2);
+    width: 544px;
+    height: 330px;
+    left: calc(50% - 544px/2);
     top: 81px;
     
     font-family: Legend M54;
     font-style: normal;
     font-weight: normal;
     font-size: 20px;
-    line-height: 125%;
-    /* or 25px */
+    line-height: 150%;
+    /* or 30px */
     
     text-align: center;
     letter-spacing: 0.015em;
     
-    color: #6C6C6C;    
+    color: #6C6C6C;   
 }
 .tablet {
-    height: 1294px;
+    height: 1335px;
 }
 .tablet-content {
     position: absolute;
     width: 688px;
-    height: 1164px;
+    height: 1199px;
     left: calc(50% - 688px/2);
-    top: 96px;  
+    top: 96px;     
 }
 .tablet-banner {
     position: absolute;
@@ -381,7 +384,7 @@
 .tablet-mission {
     position: absolute;
     width: 687px;
-    height: 232px;
+    height: 237px;
     left: 1px;
     top: 485px;
     
@@ -414,7 +417,7 @@
 .tablet-mission-text {
     position: absolute;
     width: 607px;
-    height: 75px;
+    height: 90px;
     left: calc(50% - 607px/2);
     top: 81px;
     
@@ -422,20 +425,20 @@
     font-style: normal;
     font-weight: normal;
     font-size: 20px;
-    line-height: 125%;
-    /* or 25px */
+    line-height: 150%;
+    /* or 30px */
     
     text-align: center;
     letter-spacing: 0.015em;
     
-    color: #6C6C6C;    
+    color: #6C6C6C;   
 }
 .tablet-about {
     position: absolute;
     width: 688px;
-    height: 416px;
+    height: 447px;
     left: 0px;
-    top: 748px;
+    top: 752px;
     
     background: #211F2A;
     border-radius: 25px;
@@ -465,22 +468,176 @@
 }
 .tablet-about-text {
     position: absolute;
-    width: 576px;
-    height: 275px;
-    left: calc(50% - 576px/2);
+    width: 608px;
+    height: 300px;
+    left: calc(50% - 608px/2);
     top: 81px;
     
     font-family: Legend M54;
     font-style: normal;
     font-weight: normal;
     font-size: 20px;
-    line-height: 125%;
-    /* or 25px */
+    line-height: 150%;
+    /* or 30px */
     
     text-align: center;
     letter-spacing: 0.015em;
     
     color: #6C6C6C;    
+}
+.mobile {
+    height: 1301px;
+}
+.mobile-content {
+    position: absolute;
+    width: 280px;
+    height: 1185px;
+    left: calc(50% - 280px/2);
+    top: 96px;        
+}
+.mobile-banner {
+    position: absolute;
+    width: 280px;
+    height: 191px;
+    left: calc(50% - 280px/2);
+    top: 0px;
+}
+.mobile-title {
+    position: absolute;
+    width: 261px;
+    height: 68px;
+    left: calc(50% - 261px/2 - 9.5px);
+    top: 194px;
+    
+    font-family: Legend M54;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 28px;
+    line-height: 34px;
+    display: flex;
+    align-items: center;
+    letter-spacing: 0.015em;
+    
+    color: #FFFFFF;    
+}
+.mobile-school {
+    position: absolute;
+    width: 140px;
+    height: 34px;
+    left: calc(50% - 140px/2 - 70px);
+    top: 262px;
+    
+    font-family: Legend M54;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 28px;
+    line-height: 34px;
+    display: flex;
+    align-items: center;
+    text-align: right;
+    letter-spacing: 0.015em;
+    
+    color: #6C6C6C;
+}
+.mobile-mission {
+    position: absolute;
+    width: 280px;
+    height: 235px;
+    left: calc(50% - 280px/2);
+    top: 430px;
+    
+    /* L2 */
+    
+    background: #211F2A;
+    border-radius: 25px;
+}
+.mobile-mission-title {
+    position: absolute;
+    width: 78.33px;
+    height: 30.83px;
+    left: calc(50% - 78.33px/2 - 0.67px);
+    top: -2px;
+    
+    font-family: Legend M54;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 24px;
+    line-height: 29px;
+    display: flex;
+    align-items: center;
+    text-align: center;
+    letter-spacing: 0.015em;
+    
+    color: #FFFFFF;    
+}
+.mobile-mission-text {
+    position: absolute;
+    width: 240px;
+    height: 144px;
+    left: calc(50% - 240px/2);
+    top: 45px;
+    
+    font-family: Legend M54;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 16px;
+    line-height: 150%;
+    /* or 24px */
+    
+    text-align: center;
+    letter-spacing: 0.015em;
+    
+    color: #6C6C6C;       
+}
+.mobile-about {
+    position: absolute;
+    width: 280px;
+    height: 589px;
+    left: calc(50% - 280px/2);
+    top: 693px;
+    
+    background: #211F2A;
+    border-radius: 25px;
+}
+.mobile-about-title {
+    position: absolute;
+    width: 66.67px;
+    height: 30.83px;
+    left: calc(50% - 66.67px/2 - 0.67px);
+    top: -2px;
+    
+    font-family: Legend M54;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 24px;
+    line-height: 29px;
+    display: flex;
+    align-items: center;
+    text-align: center;
+    letter-spacing: 0.015em;
+    
+    /* High Contrast */
+    
+    color: #FFFFFF;
+}
+.mobile-about-text {
+    position: absolute;
+    width: 240px;
+    height: 504px;
+    left: calc(50% - 240px/2);
+    top: 45px;
+    
+    font-family: Legend M54;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 16px;
+    line-height: 150%;
+    /* or 24px */
+    
+    text-align: center;
+    letter-spacing: 0.015em;
+    
+    color: #6C6C6C;
 }
 
 @media screen and (max-width: 767px) {
